# tensack

./: .gitignore  AGENTS.md  Cargo.toml  DATABASE_TESTING.md  README.md  SCHEMA_COMPILER.md  TENSACK_V0_DIRECT_IMPLEMENTATION.md  justfile  tensack_functional_addendum.md  tensack_rust_backend_architecture.md  tensack_ten_format_spec_v0_1.md
apps/admin-ui/: README.md  index.html
apps/landing-page/: README.md  astro.config.mjs  index.html  package.json
apps/landing-page/src/layouts/: BaseLayout.astro
apps/landing-page/src/pages/: alt.astro  index.astro
apps/landing-page/src/pages/docs/: architecture.astro  commands.astro  file-format.astro  index.astro  overview.astro
apps/landing-page/src/styles/: global.css
apps/sixpack/: Cargo.toml
apps/sixpack/src/: main.rs
apps/tensack/: Cargo.toml
apps/tensack/src/: main.rs
apps/test-lab/: README.md  index.html
apps/test-lab/experiments/: README.md
apps/test-lab/fixtures/: sample_dataset.json  sample_snapshot.json
apps/test-lab/note-taking-init/: Cargo.toml  README.md  build.rs  schema.tensack  schema.v1.tensack  schema.v2.tensack  viewer.html
apps/test-lab/note-taking-init/src/: main.rs
apps/test-lab/note-taking-playground/: Cargo.toml  README.md
apps/test-lab/note-taking-playground/src/: main.rs
apps/test-lab/note-taking-playground/static/: playground.html
benchmark/: Cargo.toml  README.md
benchmark/benches/: crud_vs_sqlite.rs  hot_path.rs
book/: 00-atlas.md  00-design-philosophy.md  01-product-shape.md  02-schema.md  03-generated-api.md  04-plan-envelope.md  05-storage.md  06-file-format.md  07-implementation-status.md  08-package-boundaries.md  09-naming-rules.md  10-work-rules.md  11-testing.md  12-schema-compiler.md  13-sqlite-mapping.md  14-write-engine.md  README.md  SUMMARY.md
book/decisions/: 0001-generated-engine-state-pack.md
book/reference/: DATABASE_TESTING.md  README.md  SCHEMA_COMPILER.md  TENSACK_API_SPEC.md  TENSACK_BOOK.md  TENSACK_IMPLEMENTATION_STATUS.md  TENSACK_PLAN_SPEC.md  TENSACK_SCHEMA_SPEC.md  TENSACK_STORAGE_SPEC.md  TENSACK_V0_DIRECT_IMPLEMENTATION.md  sixpack_6_format_spec_v0_1.md  sixpack_api_spec.md  sixpack_book.md  sixpack_chunk_naming_spec.md  sixpack_functional_addendum.md  sixpack_implementation_status.md  sixpack_plan_spec.md  sixpack_rust_backend_architecture.md  sixpack_schema_spec.md  sixpack_storage_spec.md  sixpack_v0_direct_implementation.md  tensack_chunk_naming_spec.md  tensack_functional_addendum.md  tensack_rust_backend_architecture.md  tensack_ten_format_spec_v0_1.md
docs/: commands.md  file-format.md  project-specs.md
packaging/: install.sh
tests/contracts/: README.md
tests/snapshots/: README.md
user-scripts/: install.sh
