[workspace]
members = [
  "apps/sixpack",
  "packages/sixpack",
  "packages/sixpack-core",
  "packages/sixpack-format",
  "packages/sixpack-store",
  "packages/sixpack-cli",
  "packages/sixpack-testkit",
  "packages/sixpack-schema-compiler",
  "apps/test-lab/note-taking-init",
  "benchmark",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sixpack/sixpack"

[workspace.dependencies]
sixpack = { path = "packages/sixpack" }
sixpack-core = { path = "packages/sixpack-core" }
sixpack-format = { path = "packages/sixpack-format" }
sixpack-store = { path = "packages/sixpack-store" }
sixpack-cli = { path = "packages/sixpack-cli" }
sixpack-testkit = { path = "packages/sixpack-testkit" }
sixpack-schema-compiler = { path = "packages/sixpack-schema-compiler" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
