[package]
name = "note-taking-init"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "note-taking-init"
path = "src/main.rs"

[dependencies]
sixpack.workspace = true
sixpack-schema-compiler.workspace = true

[build-dependencies]
sixpack-schema-compiler.workspace = true
